# decayfmt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: corrupt.rs  encode.rs  error.rs  format.rs  lib.rs  main.rs  open.rs
